 - Fixed a bug where Graph equality could explode memory usage and be unable to determine equality on some blank node heavy equivalent graphs (CORE-345)
 - Fixed a bug with numeric literals not being parsed using the invariant culture (CORE-344)
 - Fixed a bug with the Ontology API not returning OWL datatype properties correctly (CORE-339)
- Dependencies
 - Upgrade VDS.Common to 1.2.0 which resolves an issue that users may encounter under the VS debugger (CORE-317, CORE-292)
 - Upgrade Json.Net to 5.0.3
- Documentation
 - Documentation was moved to BitBucket wiki at http://bitbucket.org/dotnetrdf/dotnetrdf/wiki (DOCS-306)
- Core API
 - TreeIndexedTripleCollection now supports completely configurable indices (CORE-309)
 - Graph equality should now be more performant (CORE-345)
 - HTTP Debugging is no longer debug build specific (CORE-347)
- Configuration API
 - New dnr:queryEndpoint, dnr:queryEndpointUri, dnr:updateEndpoint and dnr:updateEndpointUri properties for use in place of their generic equivalents (CORE-346)
- Query
 - Wherever possible the order of variables in the SELECT clause will now be respected in SparqlResultSet objects (CORE-342)
- Storage API
 - SesameNativeTemplate is now a public class
 - AllegroGraphConnector now implements IUpdateableStorage and IAsyncUpdateableStorage (CORE-308)

Removed
- Removed defunct TalisException
- Removed defunct internal class InternalXmlWriter
- Marked DydraConnector with an obsolete usable due to continuing inconsistency and transient failures from the Dydra API
- Removed defunct Project class


0.9.0 RC4
---------

Added
- Ontology API
 - Added Direct/Indirect SubClasses and SuperClasses property on OntologyClass (CORE-295)
 - Added Direct/Indirect SubProperties and SuperProperties property on OntologyProperty (CORE-295)
 - Added Siblings property on OntologyClass and OntologyProperty (CORE-296)
 - Added IsTopClass and IsBottomClass property on OntologyClass (CORE-293)