@@ -131,6 +131,7 @@
     <Compile Include="Query\AlgebraReverseTranslation.cs" />
     <Compile Include="Query\Algebra\JoinTests.cs" />
     <Compile Include="Query\BindingsTests.cs" />
+    <Compile Include="Query\BindTests.cs" />
     <Compile Include="Query\BlankNodeVariableTests.cs" />
     <Compile Include="Query\ConstructWithOptionalTests.cs" />
     <Compile Include="Query\DatasetTests.cs" />
